[package]
name = "uchimachi-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
